# kit

./: .gitignore  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  test.sh
.github/workflows/: ci.yml
.kit/docstring_db/: meta.json
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: Card.astro  CardGroup.astro
docs/src/content/: config.ts
docs/src/styles/: theme.css
scripts/: benchmark.py  format.sh  index.py  release.sh  test.sh  test_ollama_local.py  typecheck.sh
src/kit/: __init__.py  cli.py  code_searcher.py  dependency_analyzer.py  docstring_indexer.py  llm_context.py  repository.py  summaries.py  tool_schemas.py  tree_sitter_symbol_extractor.py  vector_searcher.py
src/kit/api/: app.py  registry.py
src/kit/dependency_analyzer/: dependency_analyzer.py  python_dependency_analyzer.py  (+1 more)
tests/: README.md  golden_python.py  golden_python_complex.py  test_cli.py  test_cli_integration.py  test_cli_ref.py  test_diff_integration.py  test_diff_parser.py  test_docstring_indexer.py  test_ollama_integration.py  test_pr_review.py  test_real_pr_accuracy.py  test_registry_deterministic.py  test_repo.py  test_summaries.py  test_symbol_extractor_additional.py  test_terraform_dependency_analyzer.py  test_tool_schemas.py  test_vector_searcher.py
tests/api/: test_app.py
tests/evals/: compare_reviewers.py  cross_model_test.py  pr_test_set.txt
tests/integration/: test_api_live.py
tests/mcp/: test_call_tool_content.py  test_server.py
tests/sample_code/: c_sample.c  go_sample.go  hcl_sample.hcl  java_sample.java  javascript_sample.js  python_sample.py  ruby_sample.rb  rust_sample.rs  tf_sample.tf  tsx_sample.tsx  typescript_sample.ts
(+79 files in other folders)
