[project]
name = "kit"
version = "0.1.0"
description = "A modular toolkit for LLM-powered codebase understanding."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "tree-sitter-language-pack>=0.7.2",
    "pathspec>=0.11.1",
    "pytest>=8.3.5",
    "numpy>=1.25",
    "chromadb>=0.5.23",
]

[project.urls]
Homepage = "https://github.com/yourusername/kit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true

[project.optional-dependencies]
vector = [
    "chromadb",
    "numpy>=1.25",
    "sentence-transformers>=2.2.0"  # Added for embedding generation
]
api = [
    "fastapi>=0.100",  # Using a recent version
    "uvicorn[standard]>=0.20", # Includes standard dependencies like websockets
    "typer>=0.9" # Removed invalid [all] extra
]
dev = [
    "mypy",
    "pytest",
    "ruff", # Added ruff for linting
    "black" # Added black for formatting
]
openai = [
    "openai>=1.0.0"
]
anthropic = [
    "anthropic>=0.20.0" # Added Anthropic SDK
]
google = [
    "google-generativeai>=0.3.0" # Added Google Generative AI SDK
]
all = [
    "kit[openai]",
    "kit[anthropic]",
    "kit[google]",
    "kit[vector]",
    "kit[api]" # Also including api for a complete 'all'
]

[project.scripts]
kit = "kit.cli:app"
